@@ -896,7 +896,30 @@ public:
             while ((p = sec->Get_prop(i++))) {
                 std::string help=title=="4dos"&&p->propname=="rem"?"This is the 4DOS.INI file (if you use 4DOS as the command shell).":p->Get_help();
                 if (title!="4dos" && title!="Config" && title!="Autoexec" && !advopt->isChecked() && !p->basic()) continue;
-                msg += std::string("\033[31m")+p->propname+":\033[0m\n"+help+"\n\n";
+                std::string propvalues = "";
+                std::vector<Value> pv = p->GetValues();
+                if (p->Get_type()==Value::V_BOOL) {
+                    // possible values for boolean are true, false
+                    propvalues += "true, false";
+                } else if (p->Get_type()==Value::V_INT) {
+                    // print min, max for integer values if used
+                    Prop_int* pint = dynamic_cast <Prop_int*>(p);
+                    if (pint==NULL) E_Exit("Int property dynamic cast failed.");
+                    if (pint->getMin() != pint->getMax()) {
+                        std::ostringstream oss;
+                        oss << pint->getMin();
+                        oss << "..";
+                        oss << pint->getMax();
+                        propvalues += oss.str();
+                    }
+                }
+                for(Bitu k = 0; k < pv.size(); k++) {
+                    if (pv[k].ToString() =="%u")
+                        propvalues += MSG_Get("PROGRAM_CONFIG_HLP_POSINT");
+                    else propvalues += pv[k].ToString();
+                    if ((k+1) < pv.size()) propvalues += ", ";
+                }
+                msg += std::string("\033[31m")+p->propname+":\033[0m\n"+help+(propvalues==""?"":"\nPossible values: \033[32m"+propvalues+"\033[0m")+"\nDefault value: \033[32m"+p->Get_Default_Value().ToString()+"\033[0m\n\n";
             }
             if (!msg.empty()) msg.replace(msg.end()-1,msg.end(),"");
             setText(msg);
