@@ -3584,7 +3584,7 @@ void OUTPUT_TTF_Select(int fsize=-1) {
         if (strlen(wpstr)>1) {
             if (!strncasecmp(wpstr, "WP", 2)) wpType=1;
             else if (!strncasecmp(wpstr, "WS", 2)) wpType=2;
-            else if (!strncasecmp(wpstr, "XY", 3)) wpType=3;
+            else if (!strncasecmp(wpstr, "XY", 2)) wpType=3;
             if (strlen(wpstr)>2&&wpstr[2]>='1'&&wpstr[2]<='9') wpVersion=wpstr[2]-'0';
         }
         wpBG = render_section->Get_int("ttf.wpbg");
